--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "whatwg-fetch": "0.11.0"
   },
   "devDependencies": {
+    "@types/jest": "^23.1.0",
     "@types/react": "^16.3.18",
     "@types/react-native": "^0.55.21",
+    "@types/react-test-renderer": "^16.0.1",
     "assets-webpack-plugin": "^3.3.0",
     "autoprefixer": "^6.3.3",
     "babel-cli": "^6.6.0",
